update: 新增每日账单所有公司数据统计