@@ -1,7 +1,7 @@
 package com.yunze.business.token;
 
 import org.springframework.stereotype.Component;
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
 
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
@@ -10,7 +10,9 @@ import java.util.Random;
 @Component
 public class TokenProcess {
 
-    private TokenProcess(){};
+    private TokenProcess() {
+    };
+
     private static final TokenProcess instance = new TokenProcess();
 
     public static TokenProcess getInstance() {
@@ -19,15 +21,15 @@ public class TokenProcess {
 
     /**
      * 生成Token
+     * 
      * @return
      */
     public String makeToken() {
         String token = (System.currentTimeMillis() + new Random().nextInt(999999999)) + "";
         try {
             MessageDigest md = MessageDigest.getInstance("md5");
-            byte md5[] =  md.digest(token.getBytes());
-            BASE64Encoder encoder = new BASE64Encoder();
-            return encoder.encode(md5);
+            byte md5[] = md.digest(token.getBytes());
+            return Base64.getEncoder().encodeToString(md5);
         } catch (NoSuchAlgorithmException e) {
             // TODO Auto-generated catch block
             e.printStackTrace();
